# LIOKit

./: .gitignore  LICENSE  README.md  README_zh_CN.md
dataset/csv/: gps_data.csv
doc/: 00.readme.md  01.design.md  01.imu_preintegration.md  02.imu_preintegration.md  03.image_projection.md
doc/assets/: class_data_flow_diagram.md
scripts/: build.py  dataset_convert.py  gps_data_visualization.ipynb  imu_data_visualization.ipynb  imu_filter.py  imu_kalman_filter.py
src/LIOKit/: CMakeLists.txt  vcpkg.json
src/LIOKit/include/liokit/: liokit.h
src/LIOKit/include/liokit/data/: imu_data.h  odometry_data.h  quaternion.h  vector3.h
src/LIOKit/src/: imu_preintegration.cpp  imu_preintegration.h
src/LIOKit/src/inner/: imu_data_inner.h  utils.h
src/LIOKit/test/: CMakeLists.txt  gtest_main.cpp  imu_preintegration_test.cpp  vcpkg_test_main.cpp
